feat: Register user in auth DB
